# levante-admin

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: bootstrap.rs  config.rs  mod.rs  route.rs
src/controller/: auth.rs  crud_trait.rs  errors.rs  mod.rs  posts.rs  xmlrpc.rs
src/database/: enums.rs  manager.rs  mod.rs  model.rs  schema.rs
src/model/: result.rs
src/repository/: post.rs  user.rs
tests/: config_test.rs
