[package]
name = "levante-admin"
version = "0.1.0"
authors = ["Crazz <mhxdev@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.1"
actix-web = "0.7.19"
diesel = { version = "1.4.2", features = ["mysql", "r2d2","chrono"] }
futures = "0.1.27"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
chrono = "0.4.6"