[package]
name = "levante-admin"
version = "0.1.0"
authors = ["Crazz <mhxdev@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2.3"
actix-web = "1.0.3"
actix-files = "0.1.3"
actix-http = "0.2.5"
actix-multipart = "0.1.1"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
env_logger = "0.6.2"
chrono = "0.4.7"
diesel = { version = "1.4.2", features = ["mysql", "r2d2" , "chrono" , "uuidv07"] }